--- a/Exp3_AnalysingGrammar/Exp3_AnalysingGrammar.vcxproj
+++ b/Exp3_AnalysingGrammar/Exp3_AnalysingGrammar.vcxproj
@@ -81,9 +81,9 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Exp2_AnalysingLexical\Analyser.h" />
-    <ClInclude Include="..\Exp2_AnalysingLexical\Glossary.h" />
+    <ClInclude Include="Analyser.h" />
     <ClInclude Include="Expector.h" />
+    <ClInclude Include="Glossary.h" />
     <ClInclude Include="LR0_Analyser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
