--- a/Exp3_AnalysingGrammar/Exp3_AnalysingGrammar.vcxproj.filters
+++ b/Exp3_AnalysingGrammar/Exp3_AnalysingGrammar.vcxproj.filters
@@ -20,16 +20,16 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Exp2_AnalysingLexical\Analyser.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Exp2_AnalysingLexical\Glossary.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="Expector.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="LR0_Analyser.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Analyser.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Glossary.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
