--- a/Exp4_AnalysingSemantics/Exp4_AnalysingSemantics.vcxproj.filters
+++ b/Exp4_AnalysingSemantics/Exp4_AnalysingSemantics.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="Glossary.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="LR0_AnalyserPlus.h">
+    <ClInclude Include="LR0_Analyser.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
